fixed card title text readability

--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ a:active:hover {
 a:hover {
   border-color: #555555;
   background: #252525;
-  animation: strokify 2.5s ease-in-out infinite alternate;
+  animation: strokify 2s ease-in-out infinite alternate;
   font-style: italic;
 }
 
@@ -183,6 +183,29 @@ a:hover {
   }
 }
 
+@keyframes strokify-solid {
+  0% {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: var(--pink);
+    color: #222;
+  }
+  30% {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: orange;
+    color: #222;
+  }
+  60% {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: var(--pink);
+    color: #222;
+  }
+  100% {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: rgb(144, 189, 189);
+    color: #222;
+  }
+}
+
 div#projects {
   min-height: 100vh;
   width: 100%;
@@ -199,6 +222,7 @@ div#projects h1 {
   justify-content: flex-end;
   align-items: flex-start;
   padding-left: 8rem;
+  letter-spacing: 1.75rem;
 }
 
 div.section-header {
@@ -316,7 +340,8 @@ div.card:hover {
 }
 
 div.card:hover h2 {
-  animation: color-bend 0.5s ease forwards;
+  animation: color-bend 0.5s ease forwards,
+    strokify-solid 5s ease-in-out infinite alternate;
 }
 
 div.card hr {
@@ -372,11 +397,11 @@ div.card:hover hr {
 
 @keyframes color-bend {
   0% {
-    text-shadow: 0px 0px 0px rgba(255, 166, 0, 0.555),
+    text-shadow: 0px 0px 10px #222, 0px 0px 0px rgba(255, 166, 0, 0.555),
       -0px -0px 0px rgba(152, 226, 226, 0.4);
   }
   50% {
-    text-shadow: 10px 10px 0px rgba(255, 166, 0, 0.555),
+    text-shadow: 0px 0px 10px #222, 10px 10px 0px rgba(255, 166, 0, 0.555),
       -10px -10px 0px rgba(152, 226, 226, 0.4);
   }
   100% {
